badge spacing fixed

--- a/static/src/stylesheets/module/content-garnett/_types.scss
+++ b/static/src/stylesheets/module/content-garnett/_types.scss
@@ -190,13 +190,20 @@ $quote-mark: 35px;
             padding-left: $gs-gutter/2;
         }
     }
+    .content__main-column--article .badge--alt {
+        padding-bottom: $gs-baseline;
+    }
 
     .badge--alt {
         padding-top: 0;
         border-top: 0;
-        padding-bottom: $gs-baseline;
         // magic numbers are correcting line heights so vertical alignment appears even
         margin-top: 2px;
+
+        a {
+            padding-bottom: 0;
+            margin-bottom: 0;
+        }
     }
 
     .byline,
